error messages
  File "/home/cnc-machine-2/CapstoneUI/UI.py", line 16
    from pymodbus.client import ModbusTcpClient
SyntaxError: expected 'except' or 'finally' block


(venv) cnc-machine-2@CNC-1:~/CapstoneUI $ grep "fault" UI.py
# Give both sides a static IP on the same /24. Default here assumes
# Default TCP settings — override in ScanToMillUI if needed.
                "fault":        bool(status_word & STATUS_FAULT),
        flag_keys = ("ready", "moving", "homed", "fault", "scanning")
        if status.get("fault") and not prev.get("fault"):
            self._log(f"[MODBUS] !! FAULT code {status['fault_code']}")
(venv) cnc-machine-2@CNC-1:~/CapstoneUI $ git pull
remote: Enumerating objects: 5, done.
remote: Counting objects: 100% (5/5), done.
remote: Compressing objects: 100% (3/3), done.
remote: Total 3 (delta 2), reused 0 (delta 0), pack-reused 0 (from 0)
Unpacking objects: 100% (3/3), 1.01 KiB | 1.01 MiB/s, done.
From https://github.com/Frosty-Animal/CapstoneUI
   e085e87..b925278  main       -> origin/main
Already up to date.
(venv) cnc-machine-2@CNC-1:~/CapstoneUI $ python3 UI.py
Traceback (most recent call last):
  File "/home/cnc-machine-2/CapstoneUI/UI.py", line 663, in _on_modbus_status
    self._log(f"[MODBUS] !! FAULT code {status['fault_code']}")
                                        ~~~~~~^^^^^^^^^^^^^^
KeyError: 


(venv) cnc-machine-2@CNC-1:~/CapstoneUI $ stat ~/CapstoneUI/UI.py
  File: /home/cnc-machine-2/CapstoneUI/UI.py
  Size: 38010     	Blocks: 80         IO Block: 4096   regular file
Device: 179,2	Inode: 663165      Links: 1
Access: (0664/-rw-rw-r--)  Uid: ( 1000/cnc-machine-2)   Gid: ( 1000/cnc-machine-2)
Access: 2026-04-10 04:29:19.811501444 -0500
Modify: 2026-04-10 04:29:19.811501444 -0500
Change: 2026-04-10 04:29:19.811501444 -0500
 Birth: 2026-04-10 04:29:19.811501444 -0500

[16:54:15]  [SYS] Scan-to-Mill UI initialized.
[16:54:15]  [SYS] Waiting for hardware connection...
[16:54:15]  [MODBUS] Connecting to ClearCore at 192.168.1.20:502...
[16:54:15]  [VIZ] Viewport ready — awaiting camera stream
[16:54:15]  [VIZ] _init_viewport completed successfully
[16:54:15]  [MODBUS] ClearCore link ESTABLISHED.
[16:54:15]  [MODBUS] Link up to ClearCore at 192.168.1.20:502, slave id 1
[16:54:15]  [MODBUS] STATUS: READY  pos=0
[16:54:15]  [CC] PI CONNECTED
[16:54:18]  [SCAN] Initializing depth sensor...
[16:54:18]  [MODBUS] → CMD 6
[16:54:18]  [MODBUS] STATUS: READY MOVING SCANNING  pos=0
[16:54:18]  [CC] SEQ1: homing
[16:54:18]  [SCAN] Stream started at 640x480 @ 30fps
[16:54:20]  [SCAN] 25% — front face captured
[16:54:21]  [CC] HOMED - starting scan
[16:54:22]  [SCAN] 50% — rotating to side profile
[16:54:24]  [SCAN] 75% — top surface acquired
[16:54:25]  [MODBUS] STATUS: FAULT  pos=7492
[16:54:25]  [MODBUS] !! FAULT latched
[16:54:25]  [CC] E-STOP ENGAGED
[16:54:26]  [SCAN] Complete — 4700 points captured
[16:54:26]  [SYS] Post-processing options unlocked.
[16:54:28]  [MODBUS] STATUS: —  pos=7492
[16:54:28]  [CC] E-STOP CLEARED - press ENABLE to rearm
[16:54:30]  [SCAN] Initializing depth sensor...
[16:54:31]  [MODBUS] → CMD 6
[16:54:31]  [MODBUS] STATUS: READY FAULT  pos=7492
[16:54:31]  [MODBUS] !! FAULT latched
[16:54:31]  [CC] HOME FAIL - no limit hit
[16:54:31]  [SCAN] Stream started at 640x480 @ 30fps
[16:54:33]  [SCAN] 25% — front face captured
[16:54:35]  [SCAN] 50% — rotating to side profile
[16:54:37]  [SCAN] 75% — top surface acquired
[16:54:39]  [SCAN] Complete — 4700 points captured
[16:54:39]  [SYS] Post-processing options unlocked.

[17:10:41]  [MODBUS] Write exception: Modbus Error: [Input/Output] No response received after 3 retries, continue with next request
